--- a/src/client/shared/assets/styles/main.scss
+++ b/src/client/shared/assets/styles/main.scss
@@ -3,3 +3,12 @@
 body {
   font-family: $font;
 }
+
+.app {
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../images/rick-and-morty.jpg");
+  width: 100%;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+}
