--- a/src/client/shared/assets/styles/main.scss
+++ b/src/client/shared/assets/styles/main.scss
@@ -2,9 +2,9 @@
 
 body {
   font-family: $font;
-  //   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
-  //     url("../images/rick-and-morty.jpg");
-  background: var(--primary-mid-gray);
+  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+    url("../images/rick-and-morty.jpg");
+  //   background: var(--primary-mid-gray);
   width: 100%;
   height: 100vh;
   background-position: center;
