style(character modal) update modal style

--- a/src/client/shared/assets/styles/_helper.scss
+++ b/src/client/shared/assets/styles/_helper.scss
@@ -1,5 +1,13 @@
+@import "./variables";
+
 .center {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.img {
+  border-radius: 15px;
+  overflow: hidden;
+  display: flex;
 }
