--- a/src/client/shared/assets/styles/main.scss
+++ b/src/client/shared/assets/styles/main.scss
@@ -6,6 +6,7 @@ body {
   //   url("../images/rick-and-morty.jpg");
   background: var(--primary-mid-gray);
   width: 100%;
+  height: 100%;
   // height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
