style(select) update Select component style

--- a/src/client/shared/components/Select/index.scss
+++ b/src/client/shared/components/Select/index.scss
@@ -4,5 +4,11 @@
   &__select {
     width: 200px;
     margin: 0 10px;
+    .MuiOutlinedInput-root {
+      padding: 3px !important;
+    }
+    label {
+      top: -6px;
+    }
   }
 }
