feat(characters) create Characters component and import CharacterCard component here

--- a/src/client/apps/Characters/components/Characters/CharacterCard/index.scss
+++ b/src/client/apps/Characters/components/Characters/CharacterCard/index.scss
@@ -1,4 +1,4 @@
-@import "../../../../shared/assets/styles/variables";
+@import "../../../../../shared/assets/styles/variables";
 
 %common-margins {
   margin: 15px 0px;
